image alignment issue and the image url issue fixed

--- a/src/components/CommissionGrid.css
+++ b/src/components/CommissionGrid.css
@@ -214,6 +214,12 @@ tbody .odd-row {
   padding: 10px 30px;
   margin: 0 auto;
 }
+.button-placement1 {
+  display: flex;
+  gap: 25px;
+  justify-content: right;
+  /* margin-right: 40px; */
+}
 
 .previous-button {
   display: flex;
