--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -20,8 +20,9 @@
   align-items: center;
   border: 1px solid #cccccc57;
   position: absolute;
-  top: 200px;
+  /* top: 200px; */
   left: 25px;
+  bottom: -50px;
 }
 
 .circle img {
@@ -87,7 +88,7 @@
   display: flex;
   gap: 25px;
   justify-content: right;
-  margin-right: 40px;
+  margin-right: 65px;
 }
 
 .Cta {
